--- a/Config.properties
+++ b/Config.properties
@@ -1,12 +1,14 @@
 [Mappings]
 mappings.logfile=MachineLearning.log
-loglevel=20
+loglevel=DEBUG
 
 [MongoProperties]
+isAuthEnabled=true
+auth_db=admin
 address=localhost
 port=27017
-username=
-password=
-isAuthEnabled=false
+username=cuckoo
+password=goodDeveloper@123
 db_name=cuckoo
-collection_name=cluster2db
+fingerprint_collection=cluster2db
+meta_collection=meta_cluster
