--- a/Config.json
+++ b/Config.json
@@ -3,6 +3,7 @@
     "mini_batch_size": 100
   },
   "data": {
+    "config_param_chunk_size" : 1000,
     "feature_vector_path": "/home/satwik/Documents/MachineLearning/Data/feature_vector/",
     "feature_pool_path": "/home/satwik/Documents/MachineLearning/Data/feature_pool/",
     "reduced_matrix_path": "/home/satwik/Documents/MachineLearning/Data/reduced_matrix/",
@@ -32,7 +33,8 @@
       "auth_db": "admin",
       "is_auth_enabled": true,
       "db_name": "cuckoo",
-      "collection_name": "cluster2db"
+      "collection_name": "cluster2db",
+      "malheur_collection_name": "MalheurLabels"
     }
   }
 }
