--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,10 @@
-sshtunnel
-pandas
-gensim=2.0.0
-pymongo
-sklearn
-scipy
-matplotlib
-nearpy
-datasketch
-falconn
-keras
-ipdb
-h5py
-tensorflow
-hickle
-numpy
-scipy
+pymongo==3.4.0
+kafka_python==1.3.5
+hickle==2.1.0
+pandas==0.21.0
+torch==0.1.10.post2
+sshtunnel==0.1.2
+numpy==1.13.3
+scipy==0.19.1
+ipdb==0.10.3
+matplotlib==1.5.1
