--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-pymongo==3.4.0
-kafka_python==1.3.5
-hickle==2.1.0
-pandas==0.21.0
-torch==0.1.10.post2
-sshtunnel==0.1.2
-numpy==1.13.3
-scipy==0.19.1
-ipdb==0.10.3
-matplotlib==1.5.1
+pymongo
+kafka_python
+hickle
+pandas
+torch
+sshtunnel
+numpy
+scipy
+scikit-learn
+ipdb
+matplotlib
+keras
