--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+xgboost
+seaborn
+deprecated
+yara
+scikit-image
+requests
 ete3
 scikit-bio
 pathos
@@ -14,3 +20,6 @@ scikit-learn
 ipdb
 matplotlib
 keras
+opencage
+gensim
+joblib
